--- a/index.html
+++ b/index.html
@@ -20,6 +20,23 @@
       padding-top: 20px;
     }
   </style>
+  <style>
+    /* --- Theme Customization --- */
+    :root {
+      --theme-color: #007AFF; /* Apple Blue */
+    }
+
+    .cover-main .button {
+      background-color: var(--theme-color);
+      border: 1px solid var(--theme-color);
+      transition: all 0.3s ease;
+    }
+
+    .cover-main .button:hover {
+      background-color: #0056b3;
+      border-color: #0056b3;
+    }
+  </style>
 </head>
 <body>
   <div id="app">加载中...</div>
