--- a/index.html
+++ b/index.html
@@ -6,35 +6,58 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
   <meta name="description" content="免费大模型资源收集站">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
-  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/vue.css">
+  <!-- 1. 主题切换为暗色主题 -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/docsify@4/lib/themes/dark.css">
+  <!-- 2. 代码高亮主题适配暗色背景 -->
+  <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/prismjs@1/themes/prism-okaidia.css">
+
+  <!-- 3. 赛博花园 (Cyber Garden) 主题自定义样式 -->
   <style>
-    /* 自定义样式 */
-    .app-name-link img {
-      width: 120px;
-    }
-    .sidebar-nav li strong {
-      color: #42b983;
-      font-size: 14px;
-    }
-    .content {
-      padding-top: 20px;
-    }
-  </style>
-  <style>
-    /* --- Theme Customization --- */
     :root {
-      --theme-color: #007AFF; /* Apple Blue */
+      --theme-color: #f92672; /* 霓虹品红 */
+      --sidebar-background: #1e1e1e;
+      --main-background: #282a36;
+      --text-color: #f8f8f2;
+      --code-background: #272822;
     }
-
+    body {
+      background-color: var(--main-background);
+      color: var(--text-color);
+    }
+    .sidebar {
+      background-color: var(--sidebar-background);
+    }
+    .sidebar-nav > li > a.active {
+      border-right-color: var(--theme-color) !important;
+    }
+    a, .sidebar-nav > li > a {
+      color: var(--text-color);
+    }
+    a:hover, .sidebar-nav > li > a:hover {
+      color: var(--theme-color);
+    }
+    .markdown-section strong {
+      color: var(--theme-color);
+    }
+    .search input {
+      background-color: var(--main-background) !important;
+      color: var(--text-color) !important;
+      border: 1px solid var(--theme-color) !important;
+    }
     .cover-main .button {
-      background-color: var(--theme-color);
-      border: 1px solid var(--theme-color);
+      background-color: transparent;
+      color: var(--theme-color);
+      border: 2px solid var(--theme-color);
       transition: all 0.3s ease;
+      font-weight: bold;
     }
-
     .cover-main .button:hover {
-      background-color: #0056b3;
-      border-color: #0056b3;
+      background-color: var(--theme-color);
+      color: white;
+    }
+    /* 动态背景的颜色 */
+    #particles-js {
+        background-color: #1a1a1a;
     }
   </style>
 </head>
