fix(ui): Correct cover page navigation and unify dark theme style

--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@
     #particles-js {
         background-color: #1a1a1a;
     }
+    /* 统一内容区域背景 */
+    .content {
+        background: transparent;
+    }
   </style>
 </head>
 <body>
