feat(ui): Enhance cover page style to match Cyber Garden theme

--- a/index.html
+++ b/index.html
@@ -44,6 +44,16 @@
       color: var(--text-color) !important;
       border: 1px solid var(--theme-color) !important;
     }
+    .cover-main h1 {
+      color: #fff; /* Bright white for the main title */
+      text-shadow: 0 0 10px var(--theme-color), 0 0 20px var(--theme-color); /* Neon glow effect */
+      font-size: 4em; /* Larger font size for impact */
+    }
+    .cover-main p {
+      color: #f8f8f2; /* Use the primary text color */
+      font-size: 1.5em; /* Slightly larger for readability */
+      text-shadow: 0 0 5px #000; /* Subtle shadow for depth */
+    }
     .cover-main .button {
       background-color: transparent;
       color: var(--theme-color);
