--- a/index.html
+++ b/index.html
@@ -127,8 +127,7 @@
     .sidebar-toggle {
       position: absolute;
       top: 10px;
-      left: 50%;
-      transform: translateX(-50%);
+      right: 10px;
       z-index: 100;
       background-color: rgba(30, 30, 30, 0.7);
       border: 1px solid rgba(255, 255, 255, 0.1);
