增加正文内容宽度到1200px

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       background-color: transparent;
       /* 优化内容区域间距 */
       padding: 2rem 40px;
-      max-width: 900px;
+      max-width: 1200px; /* 增加内容区域宽度 */
       margin: 0 auto;
       /* 为文字添加阴影以确保在动态背景上的可读性 */
       text-shadow: 0 0 2px rgba(0, 0, 0, 0.5);
